fixed datePicker inputs

--- a/nodeJS/web-portal/src/main.css
+++ b/nodeJS/web-portal/src/main.css
@@ -23,6 +23,6 @@ nav > div{
     position: absolute;
 }
 .usefulItems-datePicker-container input{
-    width:80px;
+    width:80px !important;
     text-align: center;
 }
